cmake_minimum_required(VERSION 3.10)
project(CPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(CPP main.cpp AlgoNotes/311.cpp AlgoNotes/312.cpp AlgoNotes/321.cpp AlgoNotes/361.cpp AlgoNotes/chap04/411.cpp AlgoNotes/chap04/413.cpp AlgoNotes/chap04/422.cpp AlgoNotes/chap04/432.cpp AlgoNotes/chap04/441.cpp AlgoNotes/chap04/442.cpp AlgoNotes/chap04/443.cpp AlgoNotes/chap04/461.cpp AlgoNotes/chap06/631.cpp AlgoNotes/chap06/641.cpp AlgoNotes/ch07/711.cpp AlgoNotes/chap08/271.cpp AlgoNotes/chap08/273.cpp AlgoNotes/chap08/277.cpp AlgoNotes/chap08/279.cpp)